# othello-revamp

./: .envrc  .gitignore  .prettierignore  .prettierrc  Makefile  README.md  biome.json  flake.nix  justfile  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  toolchain.nix
.github/workflows/: root.yml  wasm.yml  web.yml
wasm/: Cargo.toml  README.md
wasm/pkg/: LICENSE  boardgame_ai.d.ts  boardgame_ai.js  boardgame_ai_bg.js  boardgame_ai_bg.wasm  boardgame_ai_bg.wasm.d.ts  package.json
wasm/src/: lib.rs  othello.rs
wasm/src/ai/: mod.rs  othello.rs
wasm/src/rules/: othello.rs
web/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: NavBar.svelte  time.ts
web/src/othello/components/: Board.css  Board.svelte  ControlPanel.svelte  Navbar.svelte  OthelloGame.svelte  ScoreBoard.svelte  Status.svelte  types.ts
web/src/routes/: +page.svelte
web/src/routes/othello/: +page.svelte  Board.svelte
web/src/routes/othello/about/: +page.svelte
web/src/toppage/: NavBar.svelte
