[package]
name = "boardgame-ai"
version = "0.1.0"
authors = ["aster <137767097+aster-void@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com:ut-code/othello-revamp"
description = "Othello AI, revamped on Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

js-sys = "0.3.72"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
